eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Premier__c.object
<CustomObject>
    <fields>
        <fullName>Amount_in_60_days_plus_savings__c</fullName>
        <label>Amount in 60 days plus savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_in_instant_access_savings__c</fullName>
        <label>Amount in instant access savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_invested__c</fullName>
        <label>Amount invested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Are_you_married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you married?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_saving_for_your_retirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you saving for your retirement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_what_age_do_you_intend_to_retire__c</fullName>
        <inlineHelpText>What plans do you have in place to fund your intemded retirement age</inlineHelpText>
        <label>At what age do you intend to retire?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Board_Limits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Limits</label>
        <referenceTo>Board_Limits_v1__c</referenceTo>
        <relationshipLabel>Premier/DPS Factfinds</relationshipLabel>
        <relationshipName>Premier_DPS_Factfinds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_name__c</fullName>
        <formula>Customer_s_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colleague_Payment__c</fullName>
        <formula>IBB_Up_Front_Commission_fee__c *0.10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Colleague Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consent_Declaration__c</fullName>
        <label>Consent Declaration</label>
        <picklist>
            <picklistValues>
                <fullName>I confirm that the above information is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>correct and true. I consent to this</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>information being provided to third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>party service providers to match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>my needs:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consent_to_share_information__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer has given consent for their information to be shared with the IFA?</inlineHelpText>
        <label>Consent to share information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_E_mail_address__c</fullName>
        <label>Customer E-mail address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Name_del__c</fullName>
        <formula>Customer_s_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Signature__c</fullName>
        <description>Customer Signature confirming that consent to pass details to IFA have been obtained</description>
        <inlineHelpText>Please print DPS/IFA factfind and ask customer tosign to confirm consent of information being passed to IFA</inlineHelpText>
        <label>Customer Signature</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_address__c</fullName>
        <formula>Customer_s_Profile__r.Customer_Address_District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_phone_Number__c</fullName>
        <formula>Customer_s_Profile__r.Home_Telephone_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer&apos;s Profile</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Premier_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Commission_to_be_paid__c</fullName>
        <inlineHelpText>The IFA is to enter the date the commission will be paid to IBB (Usually 2 months post sign up)</inlineHelpText>
        <label>Anticipated Commission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_IHT_planning_last_reviewed__c</fullName>
        <label>Date IHT planning last reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_factfind_completed__c</fullName>
        <label>Date factfind completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Please enter the customer/prospects date of birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time_appointment_booked_with_IFA__c</fullName>
        <inlineHelpText>Please enter the date the lead was referred to the IFA</inlineHelpText>
        <label>Date &amp; time appointment booked with IFA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_pension_plan_in_place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you have a pension plan in place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_Savings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you have any Savings?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_kind_of_protection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any kind of protection for you and your family such as life assurance, critical illness or permanent health insurance?</inlineHelpText>
        <label>Do you have any kind of protection?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_save_each_month__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you save each month?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income__c</fullName>
        <description>please enter the clients gross annual income</description>
        <label>Gross Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Turnover_of_Business__c</fullName>
        <label>Gross Turnover of Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Have_you_done_any_IHT_Planning__c</fullName>
        <inlineHelpText>Please ask the client if they have any existing Inheritance tax planning in place and date they did this?</inlineHelpText>
        <label>Do you have any IHT Planning in place</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_used_this_years_ISA_Allow__c</fullName>
        <label>Used this years ISA Allowances</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Cash ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Stocks and Shares ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Cash &amp; Stocks &amp; Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_many_dependant_do_you_have__c</fullName>
        <inlineHelpText>Includes children and any one else that is dependant on you such as elderly relatives.</inlineHelpText>
        <label>How many dependant do you have</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_much_are_your_monthly_expenses__c</fullName>
        <label>How much are your monthly expenses?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_much_do_you_have_in_savings__c</fullName>
        <label>How much do you have in savings?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_much_do_you_save_a_month__c</fullName>
        <label>How much do you save a month?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IBB_Commission__c</fullName>
        <inlineHelpText>IFa to enter the amount of commission due to IBB on completion of the sales</inlineHelpText>
        <label>IBB Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IBB_Lump_Sum_Commission_fee__c</fullName>
        <label>IBB Lump Sum Commission fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IBB_Trail_Fee__c</fullName>
        <label>IBB Trail Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IBB_Up_Front_Commission_fee__c</fullName>
        <label>IBB Up Front Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IFA_Client_name__c</fullName>
        <formula>Customer_s_Profile__r.FirstName + &apos; &apos; + Customer_s_Profile__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFA Client name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFA_Contact_1__c</fullName>
        <inlineHelpText>The IFA WILL COMPLETE THIS FIELD TO CONFIRM THE OUTCOME OF THE FIRST ATTEMPTED CONTACT WITH THE CUSTOMER</inlineHelpText>
        <label>IFA Contact 1</label>
        <picklist>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callback arranged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st meeting Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Meeting booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Conversation with Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Signed and Business Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment booked - Customer no show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended - next meeting booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended - no business written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended - Business agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial E-mail contact with client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFA_Contact_2__c</fullName>
        <label>IFA Contact 2</label>
        <picklist>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callback arranged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st meeting Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Meeting booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Conversation with Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Signed and Business Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment booked - Customer no show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended - next meeting booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended - no business written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended - Business agreed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFA_Contact_3__c</fullName>
        <label>IFA Contact 3</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Conversation with Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callback arranged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st meeting Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Meeting booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment booked - Customer no show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended - next meeting booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended - no business written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended - Business agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Signed and Business Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Written</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFA_Contact_Date_1__c</fullName>
        <label>IFA Contact Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFA_Contact_Date_2__c</fullName>
        <label>IFA Contact Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFA_Contact_Date_3__c</fullName>
        <label>IFA Contact Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IFA_Notes_for_IBB_on_Referral__c</fullName>
        <inlineHelpText>The IFA will include notes on the referral and any business generated.  This area can also be used to provide details on when any commission will fall due.</inlineHelpText>
        <label>IFA Notes for IBB on Referral</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Lead_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Lead Provider</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Premier_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interested_in__c</fullName>
        <label>Interested in</label>
        <picklist>
            <picklistValues>
                <fullName>Protection &amp; Wealth Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pensions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax efficient investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Pension Scheme</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Edgware Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whitechapel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Ham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Team referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lump_Sum_Amount_Invested__c</fullName>
        <inlineHelpText>IFA Should enter details of any lump sum investment done following DPS referral</inlineHelpText>
        <label>Lump Sum Amount Invested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_contribution_to_pension_plan__c</fullName>
        <label>Monthly contribution to pension plan</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Business_Profit__c</fullName>
        <inlineHelpText>If Business owner please enter the last Net profit for the business</inlineHelpText>
        <label>Net Business Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Montly_Income__c</fullName>
        <inlineHelpText>Please ask the client what their Net monthly Income is (take home Pay)</inlineHelpText>
        <label>Net Montly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <description>Please Enter the number of employees for the group Pension Scheme</description>
        <inlineHelpText>Please Enter the number of employees for the group Pension Scheme</inlineHelpText>
        <label>No. of Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Notes to aid both manager and IFA</inlineHelpText>
        <label>Notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_please_specify__c</fullName>
        <description>Who manages the customers savings investments other than IBB</description>
        <inlineHelpText>Please specify which Banks/Stockbroker/Fund Manager currently manages the customers savings/investments.</inlineHelpText>
        <label>Other (please specify)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment no show with IFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended: secondary meeting booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended: no business written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment attended: business written</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_Sold__c</fullName>
        <inlineHelpText>The IFA will completed details of products sold following the referral.</inlineHelpText>
        <label>Products Sold</label>
        <picklist>
            <picklistValues>
                <fullName>Lump Sum Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stocks &amp; Shares ISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharia DPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISA Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIPP Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrap Fund</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Protection_Policies_in_Place__c</fullName>
        <inlineHelpText>If the customer has protection polciies in place please seect which of the following types of cover they have?</inlineHelpText>
        <label>Protection Policies in Place</label>
        <picklist>
            <picklistValues>
                <fullName>Mortgage Life Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life assurance (Term)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole of Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical illness Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent health insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will and IHT planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Planning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_savings__c</fullName>
        <label>Purpose of savings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_ineligible__c</fullName>
        <label>Reason ineligible</label>
        <picklist>
            <picklistValues>
                <fullName>Funds not avaliable to invest.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough free income to save.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No identified needs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings needed in the short term.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regular_premium_business__c</fullName>
        <inlineHelpText>the IFA will enter details of any regular premium business he has done with the IBb client including Stocks &amp; Shares ISA&apos;s or regular premium Pension saving where IBB is due a commission.</inlineHelpText>
        <label>Regular Amount Invested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Premier_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Initial conversation held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st meeting attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd meeting attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork signed and business setup.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Lost) - Client unsuitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Lost) - Client not proceeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Lost) - No needs identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected (before IFA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuitable referral - no client needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuitable referral - no RSK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuitable referral - insufficient funds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tell_me_about_your_family__c</fullName>
        <label>Tell me about your family</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tell_me_about_your_lifestyle__c</fullName>
        <label>Tell me about your lifestyle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tell_me_about_your_work__c</fullName>
        <label>Tell me about your work</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Payroll_annual__c</fullName>
        <description>Please ask the customer what is the value of the annual Payroll.  If they give a monthly figure x 12</description>
        <inlineHelpText>Please ask the customer what is the value of the annual Payroll.  If they give a monthly figure x 12</inlineHelpText>
        <label>Total Value of Payroll (annual)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Pension_Provision__c</fullName>
        <inlineHelpText>Please ask the customer whether they have a Pension in place to fund their retirement.  If they do ask them whether this is provided by their employer or a Personal pension?</inlineHelpText>
        <label>Type of Pension Provision</label>
        <picklist>
            <picklistValues>
                <fullName>Defined benefit (Final Salary Pension)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Employyer Pension Scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stakehodler Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Invested Personal pension Scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Pension Provision</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_customer__c</fullName>
        <label>Type of customer</label>
        <picklist>
            <picklistValues>
                <fullName>Exisiting Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_of_commision_earned__c</fullName>
        <label>Value of commision earned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_other_investments__c</fullName>
        <label>Value of other investments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_stocks_and_shares_holdings__c</fullName>
        <label>Value of stocks and shares holdings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Which_is_most_important_to_you__c</fullName>
        <inlineHelpText>Which of the following is most important to you?</inlineHelpText>
        <label>Which is most important to you?</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>